--- a/dou_yoroi/assets/css/style.css
+++ b/dou_yoroi/assets/css/style.css
@@ -227,6 +227,10 @@ h4 {
 /*concept end*/
 
 /*application start*/
+.application {
+    margin-bottom: 240px;
+}
+
 .application > .sec-title {
     padding-top: 120px;
 }
@@ -253,6 +257,10 @@ h4 {
     padding-left: 60px;
 }
 
+.app-text-inner > .sub-title {
+    text-align: left;
+}
+
 .app-text-inner::before {
     content: "";
     position: absolute;
@@ -271,6 +279,35 @@ h4 {
 }
 /*application end*/
 
+/*gallery start*/
+.gallery-bg {
+    position: relative;
+    background-image: url(../../assets/images/main_03.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+}
 
+.gallery-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.6);
+}
 
+.gallery-wrap {
+    padding: 70px 0;
+}
+
+.gallery-sentence {
+    width: 70%;
+    margin: auto;
+    line-height: 2;
+    font-weight: bold;
+}
+/*gallery end*/
 
